# ralph-plus-plus

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  ralph++.yaml.example  ralph-auto.yaml.example
.a0proj/: project.json
.a0proj/memory/: index.faiss  index.pkl  knowledge_import.json
.github/workflows/: check.yml  ci.yml
docker/: Dockerfile.sandbox-patch
docs/: default-prompt-spec.md
ralph_auto/: __init__.py  cli.py  config.py  hooks.py  orchestrator.py
ralph_auto/steps/: sandbox.py  worktree.py
ralph_auto/tools/: base.py
ralph_pp/: __init__.py  cli.py  config.py  detection.py  hooks.py  orchestrator.py  sandbox.py  skills.py
ralph_pp/plugin/: README.md
ralph_pp/plugin/.claude-plugin/: plugin.json
ralph_pp/plugin/skills/ralph/: SKILL.md
ralph_pp/steps/: _git.py  _prompts.py  post_review.py  prd.py  sandbox.py  worktree.py
ralph_pp/tools/: __init__.py  base.py  cli_tool.py  factory.py  permissions.py
scripts/: ralph-reviewed.sh  ralph-single-step.sh
tests/: test_cli.py  test_cli_tool.py  test_config.py  test_detection.py  test_lgtm.py  test_orchestrator.py  test_permissions.py  test_prd.py  test_review_loops.py  test_sandbox.py  test_sandbox_orchestrated.py  test_sandbox_resolution.py  test_severity.py  test_skills.py  test_worktree.py
